implement redis options

--- a/WebApiTestApp/appsettings.json
+++ b/WebApiTestApp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "Redis": {
-    "Configuration": "localhost:6379"
+    "Configuration": "localhost:6379",
+    "CacheDurationSeconds": 300
   },
   "Logging": {
     "LogLevel": {
